fix spacing in photo name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ body {
 
 #photoslower {
     clear: both;
-    margin-top: 20px;
+    margin-top: 40px;
     line-height: 0;
     max-width: 100%;
     line-height: 0;
